--- a/lib/google_crawler_web/templates/registration/new.html.eex
+++ b/lib/google_crawler_web/templates/registration/new.html.eex
@@ -1,3 +1,5 @@
+<h2><%= gettext("Create Account") %></h2>
+
 <%= form_for @changeset, Routes.registration_path(@conn, :create), fn f -> %>
   <%= label f, :email %>
   <%= email_input f, :email %>
