Implement user sign out

--- a/lib/google_crawler_web/templates/session/new.html.eex
+++ b/lib/google_crawler_web/templates/session/new.html.eex
@@ -10,4 +10,6 @@
   <%= error_tag f, :password %>
 
   <%= submit gettext("Sign in") %>
+  or
+  <%= link gettext("Register"), to: Routes.registration_path(@conn, :new) %>
 <% end %>
