--- a/lib/google_crawler_web/templates/layout/app.html.eex
+++ b/lib/google_crawler_web/templates/layout/app.html.eex
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <%= csrf_meta_tag() %>
   </head>
-  <body>
+  <body class="<%= body_class(@conn) %>">
     <header>
       <section class="container">
         <h1><%= gettext("Google Crawler") %></h1>
+        <nav>
+          <ul>
+            <%= if @conn.assigns.user_signed_in? do %>
+              <li>
+                <%= link gettext("Sign Out"), to: Routes.session_path(@conn, :delete, @conn.assigns.current_user), method: :delete %>
+              <li>
+            <% end %>
+          </ul>
+        </nav>
       </section>
     </header>
     <main role="main" class="container">
