Add tests for upload controller

--- a/lib/google_crawler_web/templates/keyword/_form.html.eex
+++ b/lib/google_crawler_web/templates/keyword/_form.html.eex
@@ -3,7 +3,7 @@
   <p><%= gettext("📝 Please put one keyword per line") %></p>
   <%= form_for @changeset, Routes.upload_path(@conn, :create), [multipart: true], fn f -> %>
     <%= label f, :file %>
-    <%= file_input f, :file, required: true, accept: "text/csv" %>
+    <%= file_input f, :file, required: true %>
     <%= error_tag f, :file %>
 
     <%= submit gettext("Upload") %>
