--- a/lib/google_crawler_web/templates/keyword/_form.html.eex
+++ b/lib/google_crawler_web/templates/keyword/_form.html.eex
@@ -1,11 +1,9 @@
-<section>
-  <h3><%= gettext("Upload your keyword file (.csv)") %></h3>
-  <p><%= gettext("📝 Please put one keyword per line") %></p>
-  <%= form_for @changeset, Routes.upload_path(@conn, :create), [multipart: true], fn f -> %>
-    <%= label f, :file %>
-    <%= file_input f, :file, required: true %>
-    <%= error_tag f, :file %>
+<h3><%= gettext("Upload your keyword file (.csv)") %></h3>
+<p><%= gettext("📝 Please put one keyword per line") %></p>
+<%= form_for @changeset, Routes.upload_path(@conn, :create), [multipart: true], fn f -> %>
+  <%= label f, :file %>
+  <%= file_input f, :file, required: true, accept: "text/csv" %>
+  <%= error_tag f, :file %>
 
-    <%= submit gettext("Upload") %>
-  <% end %>
-</section>
+  <%= submit gettext("Upload") %>
+<% end %>
