--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,4 +2,5 @@
 
 @import "./phoenix.css";
 
-@import "./screens/dashboard.scss"
+@import "./screens/dashboard.scss";
+@import "./screens/keyword.scss";
